--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:usesCleartextTraffic="true"
         android:theme="@style/AppTheme">
         <provider
             android:name="androidx.core.content.FileProvider"
@@ -32,6 +33,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".PostingActivity"
+            android:theme="@style/AppTheme"/>
+        <activity android:name="com.rygelouv.model.MyOffersActivity"
             android:theme="@style/AppTheme"/>
     </application>
 
