--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ apply plugin: 'kotlin-android-extensions'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.rygelouv.networkcalldslsample"
+        applicationId "com.olx.letgojunkseller"
         minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
